[tool.poetry]
name = "aempsconn"
version = "0.1.2.2"
description = "Library designed for interacting with the CIMA API (AEMPS)"
authors = ["fqlenos <fqlenos@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
annotated-types = "0.5.0"
certifi = "2023.7.22"
charset-normalizer = "3.3.0"
idna = "3.4"
pydantic = "2.4.2"
pydantic-core = "2.10.1"
requests = "2.31.0"
typing-extensions = "4.8.0"
urllib3 = "2.0.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
