[tool.poetry]
name = "aempsconn"
version = "1.0.0"
description = "Library designed for interacting with the CIMA API (AEMPS)"
license = "MIT"
authors = ["fqlenos <fqlenos@protonmail.com>"]
maintainers = ["fqlenos <fqlenos@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/fqlenos/aempsconn"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.7.1"
requests = "2.31.0"
urllib3 = "2.2.1"


[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"
pydoclint = "0.4.1"
flake8 = "7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
