[tool.poetry]
name = "aempsconn"
version = "1.1.1"
description = "Library designed for interacting with the CIMA API (AEMPS)"
license = "MIT"
authors = ["fqlenos <fqlenos@protonmail.com>"]
maintainers = ["fqlenos <fqlenos@protonmail.com>"]
readme = "README.md"
repository = "https://github.com/fqlenos/aempsconn"


[tool.poetry.dependencies]
python = "^3.10"
pydantic = "2.10.3"
requests = "2.32.3"
urllib3 = "2.2.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "4.0.1"
pydoclint = "0.5.10"
flake8 = "7.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
